--- a/src/index.css
+++ b/src/index.css
@@ -35,6 +35,7 @@ html,
 body {
 	height: 100%;
 	width: 100%;
+	font-family: "Nunito", "Arial", "Helvetica", sans-serif;
 	font-size: 100%;
 	line-height: 1;
 	font-size: 14px;
@@ -77,6 +78,7 @@ ul li {
 
 img {
 	vertical-align: top;
+	max-width: 100%;
 }
 
 h1,
@@ -87,4 +89,36 @@ h5,
 h6 {
 	font-size: inherit;
 	font-weight: normal;
+}
+
+/* --------------------------- */
+
+/* 
+
+.wrapper {
+	min-height: 100%;
+	overflow: hidden;
+	display: flex;
+	flex-direction: column
+}
+
+.page {
+	flex: 1 1 auto
+} 
+
+*/
+
+.container {
+	max-width: 1024px;
+	width: 95%;
+	margin: 0 auto;
+	padding: 0 15px
+}
+
+.content {
+	padding: 20px 0;
+}
+
+.content__sort {
+	margin-bottom: 40px;
 }
